# python-example

./: Dockerfile  README.md  build_docker.sh  dap_config.lua  pyproject.toml  run_docker.sh
src/: ii.py  nested_debugging.py
src/python_example_package/: main.py
tests/: test_additional.py  test_main.py
tests/utils/: base_utils.py
