[project]
name = "python-example"
version = "0.1.0"
description = ""
authors = [
    {name = "przemek@sagalo.pro"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
classifiers = [
    "License :: Other/Proprietary License",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
